add main graphic icons

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,43 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia</title>
+    <title>Pyxis creative</title>
+    <link
+      rel="shortcut icon"
+      href="./images/logo.ico"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&family=Roboto&display=swap"
+      rel="stylesheet"
+    >
   </head>
+
   <body>
-    <h1>Dia</h1>
+    <wrapper class="page">
+      <div class="header">
+        <nav class="header__navigation">
+          <ul class="header__nav-list">
+            <li class="header__dropdown">
+              Solutions
+            </li>
+
+            <li class="header__dropdown">
+              Recources
+            </li>
+
+            <li class="header__dropdown--off">
+              About us
+            </li>
+          </ul>
+        </nav>
+
+      </div>
+    </wrapper>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
