add styles for grid component and more for others

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     >
   </head>
 
-  <body>
+  <body class="body">
     <div class="page">
       <div class="header">
         <nav class="header__navigation">
@@ -41,7 +41,7 @@
               Recources
             </li>
 
-            <li class="header__dropdown--off">
+            <li class="header__dropdown header__dropdown--off">
               About us
             </li>
           </ul>
@@ -53,7 +53,7 @@
 
         <div class="header__content">
           <div class="header__text">
-            <p class="header__subtitle">
+            <p class="header__subheader">
               Your Key To Creative Relevance
             </p>
 
@@ -82,7 +82,7 @@
             Discover. Personalize. Optimize. Grow.
           </h2>
 
-          <span class="section-subtitle">
+          <span class="section-intro">
             A battle-tested platform designed to help you optimize costs, increase revenue, and grow your business.
           </span>
         </div>
@@ -96,7 +96,7 @@
             The AI Blueprint
           </h2>
 
-          <span class="section-subtitle">
+          <span class="section-intro">
             Shaping your social advertising with a futuristic solution to maximize incrementality
           </span>
 
@@ -108,7 +108,7 @@
         <div class="blueprint__row">
           <div class="blueprint__left">
             <div class="row-text">
-              <span class="row-text__subtitle">
+              <span class="row-text__subheader">
                 Creative AI
               </span>
 
@@ -271,7 +271,7 @@
       <div class="spot-on">
         <div class="spot-on__left">
           <div class="row-text">
-            <span class="row-text__subtitle">
+            <span class="row-text__subheader">
               Targeting ai
             </span>
 
@@ -299,7 +299,7 @@
           <img
             src="./images/spot-on/small-imgs.png"
             alt=""
-            class="spot-on__example--big"
+            class="spot-on__example spot-on__example--big"
           >
           <img src="./images/spot-on/portrait.png" alt="">
         </div>
@@ -311,7 +311,7 @@
         </h2>
 
         <div class="grid">
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/1.svg"
               alt=""
@@ -327,7 +327,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/2.svg"
               alt=""
@@ -343,7 +343,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/3.svg"
               alt=""
@@ -359,7 +359,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/4.svg"
               alt=""
@@ -375,7 +375,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/5.svg"
               alt=""
@@ -391,7 +391,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/6.svg"
               alt=""
@@ -407,7 +407,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/7.svg"
               alt=""
@@ -423,7 +423,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--shadow">
             <img
               src="./images/targeting/8.svg"
               alt=""
@@ -475,7 +475,7 @@
 
           <div class="ROI__right">
             <div class="row-text">
-              <span class="row-text__subtitle">
+              <span class="row-text__subheader">
                 Optimization Ai
               </span>
 
@@ -501,7 +501,7 @@
         </h2>
 
         <div class="grid">
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/1.svg"
               alt=""
@@ -517,7 +517,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/2.svg"
               alt=""
@@ -533,7 +533,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/3.svg"
               alt=""
@@ -549,7 +549,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/4.svg"
               alt=""
@@ -565,7 +565,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/5.svg"
               alt=""
@@ -581,7 +581,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/6.svg"
               alt=""
@@ -597,7 +597,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/7.svg"
               alt=""
@@ -613,7 +613,7 @@
             </p>
           </div>
 
-          <div class="info-card">
+          <div class="info-card info-card--blue">
             <img
               src="./images/optimization/8.svg"
               alt=""
@@ -637,7 +637,7 @@
             Advanced Analytics dashboard
           </h2>
 
-          <span class="section-subtitle">
+          <span class="section-intro">
             Slice and dice your multi-channel marketing campaigns for actionable insights in real-time.
           </span>
         </div>
@@ -709,7 +709,7 @@
 
       <div class="portfolio">
         <div class="portfolio__titles">
-          <span class="portfolio-subtitle">
+          <span class="portfolio-subheader">
             PORTFOLIO
           </span>
 
@@ -834,7 +834,7 @@
       </div>
 
       <div class="testimonials">
-        <span class="testimonials__subtitle">
+        <span class="testimonials__subheader">
           Testimonials
         </span>
 
@@ -891,7 +891,7 @@
             Instantly launch your most profitable campaigns with Pyxis Performance
           </h2>
 
-          <span class="mail__subtitle">
+          <span class="mail__intro">
             Power-packed features, Pivotal business growth
           </span>
 
@@ -901,7 +901,8 @@
             name="get-demo"
           >
             <input
-              type="text"
+              type="email"
+              required
               class="mail__input"
             >
 
@@ -1062,7 +1063,8 @@
             name="subscribe"
           >
             <input
-              type="text"
+              type="email"
+              required
               class="footer__input"
             >
 
