--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
       </div>
 
       <div class="creative">
-        <h2 class="section-title">
+        <h2 class="section-title creative__title">
           Features Of Creative AI
         </h2>
 
@@ -306,7 +306,7 @@
       </div>
 
       <div class="targeting">
-        <h2 class="section-title">
+        <h2 class="section-title targeting__title">
           Features Of Targeting AI
         </h2>
 
@@ -475,15 +475,15 @@
 
           <div class="ROI__right">
             <div class="row-text">
-              <span class="row-text__subheader">
+              <span class="row-text__subheader row-text__subheader--dark">
                 Optimization Ai
               </span>
 
-              <h3 class="row-text__title">
+              <h3 class="row-text__title row-text__title--dark">
                 Maximize ROI through smart campaign optimization
               </h3>
 
-              <p class="row-text__paragraph">
+              <p class="row-text__paragraph row-text__paragraph--dark">
                 Scale business goals with real-time data that drives omnichannel marketing performance.
               </p>
 
@@ -496,7 +496,7 @@
       </div>
 
       <div class="optimization">
-        <h2 class="section-title">
+        <h2 class="section-title optimization__title">
           Features Of Optimization AI
         </h2>
 
@@ -508,11 +508,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Real time Action Recommendation and Execution
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Lightspeed optimization
             </p>
           </div>
@@ -524,11 +524,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Custom Optimizers Models
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Train your own AI models
             </p>
           </div>
@@ -540,11 +540,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Funnel Debugger
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Stay on top with 24/7 funnel tracking
             </p>
           </div>
@@ -556,11 +556,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Pre-Trained Optimization Models
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Powerful pre-built optimization AI models
             </p>
           </div>
@@ -572,11 +572,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Auto Campaign Creation From Feedback
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Analyze past data to refine future campaigns
             </p>
           </div>
@@ -588,11 +588,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Cross Platform Optimization
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               AI backed omnichannel optimization
             </p>
           </div>
@@ -604,11 +604,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Target Driven Optimization
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Advertising meets business
             </p>
           </div>
@@ -620,11 +620,11 @@
               class="info-card__image"
             >
 
-            <h6 class="info-card__title">
+            <h6 class="info-card__title optimization__text">
               Cross Platform Metric Normalization
             </h6>
 
-            <p class="info-card__paragraph">
+            <p class="info-card__paragraph optimization__text">
               Compare results across channels
             </p>
           </div>
@@ -744,9 +744,9 @@
               </span>
 
               <div class="post__timing">
-                <span class="post__time">
+                <div class="post__time">
                   4
-                </span>
+                </div>
 
                 <span class="post__min">
                   Min Read
