style the dashboards component, fix the wave and other improwments in layout

--- a/src/index.html
+++ b/src/index.html
@@ -458,8 +458,8 @@
           </p>
         </div>
 
-        <button class="blue-row__button">
-          <img src="./images/blue-row/download.svg" alt="">
+        <button class="blue-row__button blue-row__button--big">
+          <img src="./images/blue-row/download.svg" alt="Download icon in button">
 
           <span class="btn-text">
             Download
@@ -470,7 +470,10 @@
       <div class="ROI">
         <div class="ROI__row">
           <div class="ROI__left">
-            <img src="./images/ROI/right-img.svg" alt="">
+            <img
+              src="./images/ROI/right-img.svg"
+              alt="Performance panel visualisation"
+            >
           </div>
 
           <div class="ROI__right">
@@ -493,6 +496,8 @@
             </div>
           </div>
         </div>
+
+        <div class="ROI__wave"></div>
       </div>
 
       <div class="optimization">
@@ -633,51 +638,55 @@
 
       <div class="dashboard">
         <div class="dashboard__titles">
-          <h2 class="section-title">
+          <h2 class="dashboard__title">
             Advanced Analytics dashboard
           </h2>
 
-          <span class="section-intro">
+          <span class="dashboard__intro">
             Slice and dice your multi-channel marketing campaigns for actionable insights in real-time.
           </span>
         </div>
 
         <div class="dashboard__boards">
-          <img
-            src="./images/dashboard/1.svg"
-            alt=""
-            class="dashboard__board"
-          >
+          <div class="dashboard__top">
+            <img
+              src="./images/dashboard/1.svg"
+              alt=""
+              class="dashboard__board"
+            >
 
-          <img
-            src="./images/dashboard/2.svg"
-            alt=""
-            class="dashboard__board"
-          >
+            <img
+              src="./images/dashboard/2.svg"
+              alt=""
+              class="dashboard__board"
+            >
 
-          <img
-            src="./images/dashboard/3.svg"
-            alt=""
-            class="dashboard__board"
-          >
+            <img
+              src="./images/dashboard/3.svg"
+              alt=""
+              class="dashboard__board"
+            >
+          </div>
 
-          <img
-            src="./images/dashboard/4.svg"
-            alt=""
-            class="dashboard__board"
-          >
+          <div class="dashboard__bottom">
+            <img
+              src="./images/dashboard/4.svg"
+              alt=""
+              class="dashboard__board"
+            >
 
-          <img
-            src="./images/dashboard/5.svg"
-            alt=""
-            class="dashboard__board"
-          >
+            <img
+              src="./images/dashboard/5.svg"
+              alt=""
+              class="dashboard__board"
+            >
 
-          <img
-            src="./images/dashboard/6.svg"
-            alt=""
-            class="dashboard__board"
-          >
+            <img
+              src="./images/dashboard/6.svg"
+              alt=""
+              class="dashboard__board"
+            >
+          </div>
         </div>
       </div>
 
