finish header layout

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,9 @@
             </li>
 
             <li class="header__dropdown header__dropdown--off">
-              About us
+              <a href="#" class="header__about">
+                About us
+              </a>
             </li>
           </ul>
 
@@ -68,7 +70,7 @@
 
           <div class="header__video">
             <img
-              src="./images/header/player-background.jpeg"
+              src="./images/header/player.png"
               alt="Simple preview"
               class="header__preview"
             >
