style blueprint component

--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,13 @@
 
       <div class="blueprint">
         <div class="blueprint__titles">
-          <h2 class="section-title">
+          <h2 class="blueprint__title">
             The AI Blueprint
           </h2>
 
-          <span class="section-intro">
+          <p class="blueprint__intro">
             Shaping your social advertising with a futuristic solution to maximize incrementality
-          </span>
+          </p>
 
           <span class="blueprint__small">
             Image
@@ -129,7 +129,31 @@
           </div>
 
           <div class="blueprint__right">
-            <img src="./images/blueprint/card.svg" alt="">
+            <img
+              src="./images/blueprint/card.svg"
+              alt="Post preview with comments"
+              class="blueprint__image"
+            >
+
+            <div class="blueprint__comment blueprint__comment--right">
+              <span class="blueprint__digit">7</span>
+              <img
+                src="./images/blueprint/green-arrow.svg"
+                alt="Arrow UP"
+                class="blueprint__arrow"
+              >
+              <span>Text</span>
+            </div>
+
+            <div class="blueprint__comment blueprint__comment--bottom">
+              <span class="blueprint__digit">7</span>
+              <img
+                src="./images/blueprint/green-arrow.svg"
+                alt="Arrow UP"
+                class="blueprint__arrow"
+                >
+              <span>Overall</span>
+            </div>
           </div>
         </div>
       </div>
