finish spot-on section

--- a/src/index.html
+++ b/src/index.html
@@ -316,18 +316,40 @@
         </div>
 
         <div class="spot-on__right">
-          span.spot-on__title-right
+          <div class="spot-on__flex">
+            <div class="spot-on__mini-title">
+              Master Creative
+            </div>
+
+            <img
+              src="./images/spot-on/small-imgs.png"
+              alt=""
+              class="spot-on__example"
+            >
+            <img
+              src="./images/spot-on/small-imgs.png"
+              alt=""
+              class="spot-on__example spot-on__example--big"
+            >
+          </div>
+
           <img
-            src="./images/spot-on/small-imgs.png"
+            src="./images/spot-on/portrait.png"
             alt=""
-            class="spot-on__example"
+            class="spot-on__portret"
           >
-          <img
-            src="./images/spot-on/small-imgs.png"
-            alt=""
-            class="spot-on__example spot-on__example--big"
-          >
-          <img src="./images/spot-on/portrait.png" alt="">
+
+          <div class="spot-on__comment spot-on__comment--bottom">
+            Varient Number 288
+          </div>
+
+          <div class="spot-on__comment spot-on__comment--right">
+            <p class="spot-on__string">Persona Segment 102</p>
+            <p class="spot-on__string">Location: Landon</p>
+            <p class="spot-on__string">Age: 26</p>
+            <p class="spot-on__string">Interest: Gaming</p>
+            <p class="spot-on__string">Heavy Instagrame User</p>
+          </div>
         </div>
       </div>
 
