finish grow block

--- a/src/index.html
+++ b/src/index.html
@@ -80,16 +80,37 @@
 
       <div class="grow">
         <div class="grow__titles">
-          <h2 class="section-title">
+          <h2 class="grow__title">
             Discover. Personalize. Optimize. Grow.
           </h2>
 
-          <span class="section-intro">
+          <span class="grow__intro">
             A battle-tested platform designed to help you optimize costs, increase revenue, and grow your business.
           </span>
         </div>
 
-        <div class="grow__features"></div>
+        <div class="grow__features">
+          <img
+            src="./images/grow/items-group.svg"
+            alt="Features inforgraphic"
+            class="graph"
+          >
+
+          <h2 class="grow__center">
+            Pyxis Performance
+          </h2>
+
+          <p class="grow__info">Dynamic Creatives</p>
+          <p class="grow__info">Contextual creative triggers</p>
+          <p class="grow__info">Cross Platform Segment level Learning</p>
+          <p class="grow__info">Pre trained Optimization Models</p>
+          <p class="grow__info">Cross Platform Optimization</p>
+          <p class="grow__info">Campaign Planner</p>
+          <p class="grow__info">Cognitive Multivariate Testing</p>
+          <p class="grow__info">Experiment Recommendations and Setup</p>
+          <p class="grow__info">Agile Reporting Dashboards</p>
+          <p class="grow__info">Audience Pico Segmentation</p>
+        </div>
       </div>
 
       <div class="blueprint">
