finished the brands component

--- a/src/index.html
+++ b/src/index.html
@@ -952,8 +952,8 @@
       </div>
 
       <div class="brands">
-        <h2 class="section-title">
-          Case Studies
+        <h2 class="brands__title">
+          Brands That Trust Pyxis
         </h2>
 
         <img
