finished the mail component

--- a/src/index.html
+++ b/src/index.html
@@ -982,6 +982,7 @@
               type="email"
               required
               class="mail__input"
+              placeholder="Enter Your Email address"
             >
 
             <button type="submit" class="mail__submit">
