styling the footer

--- a/src/index.html
+++ b/src/index.html
@@ -994,7 +994,7 @@
 
       <div class="footer">
         <div class="footer__left">
-          <img src="./images/logo.svg" alt="Site logo">
+          <img src="./images/logo-dark.svg" alt="Site logo">
         </div>
 
         <div class="footer__middle">
@@ -1008,25 +1008,25 @@
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     DAM
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Brand Guidelines
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Smart Creative Automatic
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Collaboration & Creative Approvals
                   </a>
                 </li>
@@ -1042,19 +1042,19 @@
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Blog
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Success Stories
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Whitepapers
                   </a>
                 </li>
@@ -1070,19 +1070,19 @@
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Founder
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Invester
                   </a>
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Clients
                   </a>
                 </li>
@@ -1098,7 +1098,7 @@
                 </li>
 
                 <li class="footer__item">
-                  <a href="" class="footer__link">
+                  <a href="#" class="footer__link">
                     Contact Us
                   </a>
                 </li>
@@ -1113,7 +1113,7 @@
           </ul>
 
           <div class="footer__socials">
-            <span class="connect">
+            <span class="footer__connect">
               Connect
             </span>
 
@@ -1145,6 +1145,7 @@
               type="email"
               required
               class="footer__input"
+              placeholder="Email Address"
             >
 
             <button type="submit" class="footer__submit">
