add dark modificator for button and add separator for posts

--- a/src/index.html
+++ b/src/index.html
@@ -906,7 +906,7 @@
           </div>
         </div>
 
-        <button class="button">
+        <button class="button button--dark">
           View All
         </button>
       </div>
