add hover & focus for submit buttons

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
               Personalization built for scale
             </h1>
 
-            <button class="button">
+            <button class="button header__button">
               Book A Demo
             </button>
           </div>
